# CMakeLists

./: CMakeLists.txt
A/: preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp  main.h
